--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,6 +16,10 @@ homepage: "https://www.aimwel.com"
 documentation: See "README.md" in project root 
 versions:
   # Latest version
+  - sha: 9aab41e6dedb451f96db0c9c92bad540a814f099
+    changeNotes: |2
+      Fixed error in measurement Id validation
+  # Older versions
   - sha: d30412388cc9e759d893bbe78cd28fd88c7b6130
     changeNotes: |2
       1. Refactored template code to optimise and reduce code.
@@ -23,7 +27,6 @@ versions:
       3. Added session Id value based on GA4 cookie logic.
       4. Query parameter passthrough; individual query param processing no longer needed.
       5. Refactored permissions to reflect changes.
-  # Older versions
   - sha: 1122b38a4184463138ae48f4d13855a8c0fc41b0
     changeNotes: |2
       Optimised code
@@ -36,3 +39,4 @@ versions:
       Optimized code
   - sha: 99a9585be36dcad22bef9f0db8d8379968e2e430
     changeNotes: Initial Version
+    
