Changed sha and code to reflect latest version
Changed sha and code to reflect latest version

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,7 +16,7 @@ homepage: "https://www.aimwel.com"
 documentation: See "README.md" in project root 
 versions:
   # Latest version
-  - sha: xxx
+  - sha: f7e4dac1fea75d4db25ab07632b6d5690bc8c1e1
     changeNotes: |2
       1. Refactored entire session and parameter logic to facilitate all scenarios
       2. Introduced traffic scoping toggle and logic to allow all or only Aimwel conversion forwarding
