--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,10 +16,14 @@ homepage: "https://www.aimwel.com"
 documentation: See "README.md" in project root 
 versions:
   # Latest version
+  - sha: 964964ecae420cbe34b70e4d61ed6eeec227b406
+    changeNotes: |2
+      1. Added 'Attribution settings to match GA4' dropdown field
+      2. URL Parameter storage duration is set with fixed value instead of being extended on visit
+  # Older versions
   - sha: 6b9bff31c9b632b55f88cf3b81394ab1d0d9da01
     changeNotes: |2
       1. Refactored unit tests
-  # Older versions
   - sha: 548224e15ca2158b33096749f85e1d18d5f810ad
     changeNotes: |2
       1. Refactored entire session and parameter logic to facilitate all scenarios
