--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,13 +16,17 @@ homepage: "https://www.aimwel.com"
 documentation: See "README.md" in project root 
 versions:
   # Latest version
+  - sha: a437825d563b120bde8ec7c8d068ea8c4de4c265
+    changeNotes: |2
+      1. Added missing job id failsafe
+      2. Updated tests to reflect latest changes
+  # Older versions
   - sha: c3ac3f97954f573c046acdbf001d6cc2234f5b02
     changeNotes: |2
       1. Added referrer and href parameters to template
       2. Modified logging to print correct situation
       3. Changed permissions of getUrl and getReferrer to corresponding usage
       4. Corrected spelling for logging
-  # Older versions
   - sha: b6a6bfdfc58bd204198c474652589a9e1a96acf6
     changeNotes: |2
       1. Added 'Attribution settings to match GA4' value to endpoint url parameters
