--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,11 +16,13 @@ homepage: "https://www.aimwel.com"
 documentation: See "README.md" in project root 
 versions:
   # Latest version
+  - sha: 658b70185420c533ce0e9e3da5112975e195a158
+    changeNotes: added registration event type
+  # Older versions
   - sha: a437825d563b120bde8ec7c8d068ea8c4de4c265
     changeNotes: |2
       1. Added missing job id failsafe
       2. Updated tests to reflect latest changes
-  # Older versions
   - sha: c3ac3f97954f573c046acdbf001d6cc2234f5b02
     changeNotes: |2
       1. Added referrer and href parameters to template
