--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
   inject-version:
     runs-on: ubuntu-latest
     needs: validate-placeholder
+    if: github.event_name == 'push'
     permissions:
       contents: write
     steps:
