add CI check to ensure pixel.js matches template.tpl and update container version tracking parameters

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,11 +19,12 @@ versions:
   - sha: __GIT_SHA__
     changeNotes: |2
       1. Renamed pixel version parameter (v → px_v) with automatic version injection via GitHub Actions
-      2. Added container version tracking (cv_v, cv_dm, cv_pm parameters)
+      2. Added container version tracking (cv_id, cv_v, cv_env, cv_dm, cv_pm parameters)
       3. Added GA cookie support (_ga parameter)
       4. Stricter endpoint URL validation
       5. Refactored pixel code for clarity and simplicity
       6. Refactored and expanded test coverage
+      7. Added CI check to ensure pixel.js matches template.tpl
   # Older versions
   - sha: 658b70185420c533ce0e9e3da5112975e195a158
     changeNotes: Added registration event type
