--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,9 +16,11 @@ homepage: "https://www.aimwel.com"
 documentation: See "README.md" in project root
 versions:
   # Latest version
+  - sha: __GIT_SHA__
+    changeNotes: Added explicit cookie permissions for _aimwel_session and _aimwel_params cookies
+  # Older versions
   - sha: f8416c27504597675f5eb0f05959fd4e3abfe0dc
     changeNotes: Updated CI workflow for two-pass SHA injection to ensure referenced commits have valid metadata
-  # Older versions
   - sha: d20d8c00d1633eefba35fa22f916bf4c214da811
     changeNotes: Changed session cookie to browser session-based (expires on browser close instead of 30-minute sliding window)
   - sha: fc2a5089e03a41d94b29a48305fb4f1e8eb1cbae
